--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
 /* Add CSS Styling */
+.Click {
+    background-color: black;
+    color: white;
+}
+.Noclick {
+    background-color: yellow;
+}
+
+.Click, .Noclick {
+    font-size: 28px;
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+}
